--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ authors = [
     { name = "Matt LeMay", email = "mplemay@users.noreply.github.com" }
 ]
 requires-python = ">=3.12,<3.15"
-dependencies = []
+dependencies = [
+    "sqlalchemy>=2,<3",
+]
 
 [build-system]
 requires = ["uv_build>=0.9.28,<0.10.0"]
