ci: fixed the publish action

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,32 +39,12 @@ jobs:
           VERSION="${{ github.event.release.tag_name }}"
           VERSION="${VERSION#v}"
           echo "version=$VERSION" >> "$GITHUB_OUTPUT"
-      - name: Bump belgie-proto version
-        if: steps.tag_check.outputs.on_main == 'true'
-        working-directory: packages/belgie-proto
-        run: uv version "${{ steps.version.outputs.version }}"
-      - name: Bump belgie-core version
-        if: steps.tag_check.outputs.on_main == 'true'
-        working-directory: packages/belgie-core
-        run: uv version "${{ steps.version.outputs.version }}"
-      - name: Bump belgie-alchemy version
-        if: steps.tag_check.outputs.on_main == 'true'
-        working-directory: packages/belgie-alchemy
-        run: uv version "${{ steps.version.outputs.version }}"
-      - name: Bump belgie-mcp version
-        if: steps.tag_check.outputs.on_main == 'true'
-        working-directory: packages/belgie-mcp
-        run: uv version "${{ steps.version.outputs.version }}"
-      - name: Bump belgie-oauth version
-        if: steps.tag_check.outputs.on_main == 'true'
-        working-directory: packages/belgie-oauth
-        run: uv version "${{ steps.version.outputs.version }}"
-      - name: Bump belgie version
+      - name: Bump version
         if: steps.tag_check.outputs.on_main == 'true'
         run: uv version "${{ steps.version.outputs.version }}"
-      - name: Build all packages
+      - name: Build package
         if: steps.tag_check.outputs.on_main == 'true'
-        run: uv build --all-packages
+        run: uv build
       - name: Publish
         if: steps.tag_check.outputs.on_main == 'true'
         run: uv publish dist/*
