--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,19 @@ dependencies = [
     "sqlalchemy>=2,<3",
 ]
 
+[project.optional-dependencies]
+encrypted = [
+    "cryptography>=46.0.4",
+]
+
 [build-system]
 requires = ["uv_build>=0.9.28,<0.10.0"]
 build-backend = "uv_build"
 
 [dependency-groups]
+crypto = [
+    "cryptography>=46.0.4",
+]
 dev = [
     "pre-commit>=4.4.0",
     "pytest>=9.0.1",
